--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,60 +4,174 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="#FAFAE4"
+    tools:context=".MainActivity"
+    tools:layout_editor_absoluteX="33dp"
+    tools:layout_editor_absoluteY="-32dp">
 
-    <TextView
+    <EditText
         android:id="@+id/city"
-        android:layout_width="138dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
+        android:layout_width="351dp"
+        android:layout_height="50dp"
+        android:autofillHints=""
+        android:hint="Enter a city name..."
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.045"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
         android:id="@+id/status"
-        android:layout_width="141dp"
-        android:layout_height="143dp"
+        android:layout_width="113dp"
+        android:layout_height="110dp"
+        android:layout_alignEnd="@+id/city"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="132dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="240dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.21" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/temp"
+        android:layout_width="123dp"
+        android:layout_height="94dp"
+        android:layout_below="@+id/status"
+        android:layout_alignEnd="@+id/city"
+        android:layout_marginEnd="208dp"
+        android:layout_marginBottom="248dp"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="50sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/main"
+        android:layout_width="152dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginBottom="284dp"
+        android:fontFamily="@font/roboto"
+        android:textAlignment="textStart"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/statusText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:layout_width="190dp"
+        android:layout_height="61dp"
+        android:layout_below="@+id/status"
+        android:layout_alignEnd="@+id/city"
+        android:layout_marginStart="204dp"
+        android:layout_marginBottom="208dp"
+        android:fontFamily="@font/roboto"
+        android:textAlignment="textStart"
+        android:textColor="@color/black"
+        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/status"
-        app:layout_constraintVertical_bias="0.025" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/wind"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="40dp"
-        android:text="TextView"
+
+        android:id="@+id/cityName"
+        android:layout_width="225dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="20dp"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:text="Simple Weather App"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/city"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statusText" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.179" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="61dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/wind"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/wind_bold" />
+
+    <TextView
+        android:id="@+id/pressure"
+        android:layout_width="90dp"
+        android:layout_height="38dp"
+        android:layout_below="@+id/status"
+        android:layout_alignEnd="@+id/temp"
+        android:layout_marginStart="164dp"
+        android:layout_marginBottom="32dp"
+        android:layout_toStartOf="@+id/statusText"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/humid"
+        android:layout_width="75dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/status"
+        android:layout_alignEnd="@+id/city"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:layout_toEndOf="@+id/pressure"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView4"
         android:layout_width="59dp"
-        android:layout_height="22dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="104dp"
-        android:text="TextView"
+        android:layout_height="59dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/pressure"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statusText" />
+        app:layout_constraintHorizontal_bias="0.519"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/clock_afternoon_bold" />
+
+    <TextView
+        android:id="@+id/wind"
+        android:layout_width="75dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/status"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="32dp"
+        android:layout_toStartOf="@+id/pressure"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="59dp"
+        android:layout_height="59dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/humid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/waves_bold" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
